--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
+.env
+keystore
+
+node_modules/
+.vscode
+.idea/
+
+**/.DS_Store
+
+**/LessonPlan.md
+**/TimeTracker.xlsx
+
+**/.ipynb_checkpoints
+**/__pycache__
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
